--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -446,6 +446,10 @@
   <string name="GroupManagement_learn_more">Rohkem infot</string>
   <string name="GroupManagement_invite_multiple_users">Neid kasutajaid ei saa sinu poolt automaatselt gruppi lisada.\n\nNad on kutsutud grupiga ühinema ja ei näe grupi sõnumeid enne kui on ühinemisega nõustunud.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Mitte praegu</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Uuenda gruppi</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">Mitte praegu</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1208,13 +1212,6 @@
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signali uuendus</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Uus Signali versioon on saadaval, koputa uuendamiseks</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokeeri %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokeeritud kontaktid ei saa enam sulle sõnumeid saata ega helistada.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokeeri</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Jagad profiili kontaktiga %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Lihtsaim viis oma profiiliinfot jagada on saatja kontaktidesse lisada. Kui sa seda ei soovi, saad siiski sel viisil oma profiiliinfot jagada.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Jaga profiili</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Saadad sõnumi?</string>
   <string name="UntrustedSendDialog_send">Saada</string>
@@ -1587,8 +1584,6 @@
     <item quantity="other">%1$s liitusid grupiga.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Grupi nimi on nüüd \"%1$s\".</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Teed oma profiilinime ja -pildi sellele grupile nähtavaks?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Eemalda blokeering</string>
   <!--prompt_mms_activity-->
