--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -491,6 +491,10 @@
   <string name="GroupManagement_learn_more">لمعرفة المزيد</string>
   <string name="GroupManagement_invite_multiple_users">لا يمكن إضافة هؤلاء المستخدمين تلقائياً إلى هذه المجموعة من قبلك. \n\n لقد تمت دعوتهم للانضمام، ولن يروا أيّة رسالة من رسائل المجموعة حتى يقبلون.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_not_now">ليس الآن</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">تحديث المجموعة</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">ليس الآن</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1327,13 +1331,6 @@
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">تحديث Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">إصدار جديد لـ Signal متوفر، أنقر للتحديث</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">هل تود حظر %s ؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">لن تتمكّن جهات الاتصال المحظورة من مراسلتك أو الإتصال بك.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">حظر</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">هل تود مشاركة الملف الشخصي مع %s ؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">أسهل طريقة لمشاركة بيانات حسابك هي إضافة المرسل إلى جهات الاتصال. إن لم ترغبوا في ذلك، يمكنكم مشاركة بيانات الملف الشخصي بهذه الطريقة.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">مشاركة الملف الشخصي</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">هل تود إرسال الرسالة ؟</string>
   <string name="UntrustedSendDialog_send">أرسل</string>
@@ -1735,8 +1732,6 @@
     <item quantity="other">%1$s انضموا إلى المجموعة.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">أسم المجموعة الآن \'%1$s\'.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">هل تود عرض اسمك وصورتك في الملف الشخصي لهذه المجموعة ؟</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">فتح القفل</string>
   <!--prompt_mms_activity-->
