--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -484,11 +484,10 @@
     <item quantity="few">Ovi članovi moraju prihvatiti novu pozivnicu za pristupanje grupi i dok to ne učine neće primati grupne poruke.</item>
     <item quantity="other">Ovi članovi moraju prihvatiti novu pozivnicu za pristupanje grupi i dok to ne učine neće primati grupne poruke.</item>
   </plurals>
-  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
-    <item quantity="one">Ovaj član ne može pristupiti novim grupama i stoga je uklonjen iz grupe:</item>
-    <item quantity="few">Ovi članovi ne mogu pristupiti novim grupama i stoga su uklonjeni iz grupe:</item>
-    <item quantity="other">Ovi članovi ne mogu pristupiti novim grupama i stoga su uklonjeni iz grupe:</item>
-  </plurals> -->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">Nove grupe posjeduju mogućnosti poput @spomena i administratora grupe, a više će mogućnosti dobiti u budućnosti.</string>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Ne sada</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">Ne sada</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1339,13 +1338,6 @@
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Nova verzija Signala</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Dostupna je nova verzija Signala, pritisnite da ažurirate</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokiraj %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokirane osobe neće Vam više moći slati poruke niti Vas zvati.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokiraj</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Podijeliti profil sa %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Najjednostavniji način da s drugima podijelite informacije o svome profilu jest dodavanje pošiljaoca u kontakte. Ako to ne želite učiniti, informacije o profilu možete podijeliti ovako.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Podijeli profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Poslati poruku?</string>
   <string name="UntrustedSendDialog_send">Šalji</string>
@@ -1734,8 +1726,6 @@
     <item quantity="other">%1$s se pridružila/lo grupi.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Naziv grupe sada glasi \'%1$s\'.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Podijeliti ime i fotografiju Vašega profila sa ovom grupom?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Otključaj</string>
   <!--prompt_mms_activity-->
