--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -83,8 +83,15 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Pogreška prilikom reprodukcije zvuka!</string>
   <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users">Blokirani korisnici</string>
+  <string name="BlockedUsersActivity__add_blocked_user">Dodaj korisnika za blokiranje</string>
   <string name="BlockedUsersActivity__blocked_users_will">Blokirani korisnici vas neće moći nazvati niti vam slati poruke.</string>
+  <string name="BlockedUsersActivity__no_blocked_users">Nema blokiranih korisnika</string>
+  <string name="BlockedUsersActivity__block_user">Blokiraj korisnika?</string>
+  <string name="BlockedUserActivity__s_will_not_be_able_to">\"%1$s\" vas neće moći nazvati niti vam slati poruke.</string>
   <string name="BlockedUsersActivity__block">Blokiraj</string>
+  <string name="BlockedUsersActivity__unblock_user">Odblokiraj korisnika</string>
+  <string name="BlockedUsersActivity__do_you_want_to_unblock_s">Želite li odblokirati \"%1$s\"?</string>
   <string name="BlockedUsersActivity__unblock">Odblokiraj</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Blokiraj i napusti %1$s?</string>
@@ -484,14 +491,65 @@
     <item quantity="few">Ovi članovi morat će prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
     <item quantity="other">Ovi članovi morat će prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
   </plurals>
-  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
-    <item quantity="one">Ovaj član nije u mogućnosti pridružiti se Novim grupama i uklonjen je iz grupe:</item>
-    <item quantity="few">Ovi članovi nisu u mogućnosti pridružiti se Novim grupama i uklonjeni su iz grupe:</item>
-    <item quantity="other">Ovi članovi nisu u mogućnosti pridružiti se Novim grupama i uklonjeni su iz grupe:</item>
-  </plurals> -->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_upgrade_to_new_group">Nadogradi u Novu grupu.</string>
+  <string name="GroupsV1MigrationInitiation_upgrade_this_group">Nadogradi ovu grupu</string>
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">Nove grupe imaju značajke poput @spominjanja i administratora grupa, a ubuduće će podržavati više značajki.</string>
+  <string name="GroupsV1MigrationInitiation_all_message_history_and_media_will_be_kept">Sva povijest poruka i medijskih zapisa će biti sačuvana od prije nadogradnje.</string>
+  <string name="GroupsV1MigrationInitiation_encountered_a_network_error">Došlo je do mrežne pogreške. Pokušajte ponovno kasnije.</string>
+  <string name="GroupsV1MigrationInitiation_failed_to_upgrade">Ažuriranje nije uspjelo.</string>
+  <plurals name="GroupsV1MigrationInitiation_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Ovaj član će morati prihvatiti pozivnicu da se ponovno pridruži ovoj grupi i neće primati poruke grupe dok ne prihvati:</item>
+    <item quantity="few">Ovi će članovi trebati prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
+    <item quantity="other">Ovi će članovi trebati prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationInitiation_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Ovaj član nije u mogućnosti pridružiti se Novim grupama i biti će uklonjen iz grupe:</item>
+    <item quantity="few">Ovi članovi se ne mogu pridružiti Novim grupama i bit će uklonjeni iz grupe:</item>
+    <item quantity="other">Ovi članovi se ne mogu pridružiti Novim grupama i bit će uklonjeni iz grupe:</item>
+  </plurals>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_to_access_new_features_like_mentions">Da biste pristupili novim značajkama poput @spominjanja i administratora, nadogradite ovu grupu.</string>
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Ne sada</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Ažuriraj grupu</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
+  <plurals name="GroupsV1MigrationSuggestionsReminder_members_couldnt_be_added_to_the_new_group">
+    <item quantity="one">%1$d član nije bilo moguće ponovno dodati u Novu grupu. Želite li ga dodati sada?</item>
+    <item quantity="few">%1$d člana nije bilo moguće ponovno dodati u Novu grupu. Želite li ih dodati sada?</item>
+    <item quantity="other">%1$d članova nije bilo moguće ponovno dodati u Novu grupu. Želite li ih dodati sada?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsReminder_add_members">
+    <item quantity="one">Dodaj člana</item>
+    <item quantity="few">Dodaj članove</item>
+    <item quantity="other">Dodaj članove</item>
+  </plurals>
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">Ne sada</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members_question">
+    <item quantity="one">Dodaj člana?</item>
+    <item quantity="few">Dodaj članove?</item>
+    <item quantity="other">Dodaj članove?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_these_members_couldnt_be_automatically_added">
+    <item quantity="one">Ovog člana nije moguće automatski dodati u Novu grupu kada je nadograđena:</item>
+    <item quantity="few">Ovi se članovi nisu mogli automatski dodati u Novu grupu kada je nadograđena:</item>
+    <item quantity="other">Ovi se članovi nisu mogli automatski dodati u Novu grupu kada je nadograđena:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members">
+    <item quantity="one">Dodaj člana</item>
+    <item quantity="few">Dodaj članove</item>
+    <item quantity="other">Dodaj članove</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_failed_to_add_members_try_again_later">
+    <item quantity="one">Neuspješno dodavanje člana. Pokušajte ponovno kasnije.</item>
+    <item quantity="few">Neuspješno dodavanje članova. Pokušajte ponovno kasnije.</item>
+    <item quantity="other">Neuspješno dodavanje članova. Pokušajte ponovno kasnije.</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_cannot_add_members">
+    <item quantity="one">Nije moguće dodati člana.</item>
+    <item quantity="few">Nije moguće dodati članove.</item>
+    <item quantity="other">Nije moguće dodati članove.</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Napusti grupu?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nećete više biti u mogućnosti slati i primati poruke u ovoj grupi.</string>
@@ -618,6 +676,9 @@
   <string name="ManageGroupActivity_edit_name_and_picture">Uredi naziv i sliku</string>
   <string name="ManageGroupActivity_legacy_group">Naslijeđena grupa</string>
   <string name="ManageGroupActivity_legacy_group_learn_more">Ovo je Naslijeđena grupa. Značajke poput grupnih administratora su dostupne samo za Nove grupe.</string>
+  <string name="ManageGroupActivity_legacy_group_upgrade">Ovo je Naslijeđena grupa. Da biste pristupili novim značajkama poput @spominjanja i administratora,</string>
+  <string name="ManageGroupActivity_legacy_group_too_large">Ova Naslijeđena grupa ne može se nadograditi u Novu grupu jer je prevelika. Maksimalna veličina grupe je %1$d.</string>
+  <string name="ManageGroupActivity_upgrade_this_group">nadogradi ovu grupu.</string>
   <string name="ManageGroupActivity_this_is_an_insecure_mms_group">Ovo je nesigurna MMS grupa. Da biste privatno razgovarali i pristupili značajkama poput naziva grupa, pozovite svoje kontakte u Signal.</string>
   <string name="ManageGroupActivity_invite_now">Pozovi sada</string>
   <!--GroupMentionSettingDialog-->
@@ -1021,6 +1082,8 @@
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Želite li dopustiti %1$s da vam pošalje poruku i da dijelite svoje ime i fotografiju s njima? Neće znati da ste vidjeli njihovu poruku dok ne prihvatite.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Želite li dopustiti %1$s da vam pošalje poruku i da dijelite svoje ime i fotografiju s njima? Nećete primati poruke dok ne odblokirate.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Želite li nastaviti razgovor s ovom grupom i podijeliti svoje ime i fotografiju s članovima?</string>
+  <string name="MessageRequestBottomView_upgrade_this_group_to_activate_new_features">Nadogradite ovu grupu da biste aktivirali nove značajke poput @spominjanja i administratora. Članovi koji nisu podijelili svoje ime ili fotografiju u ovoj grupi bit će pozvani da se pridruže.</string>
+  <string name="MessageRequestBottomView_this_legacy_group_can_no_longer_be_used">Ova Naslijeđena grupa ne može se više koristiti jer je prevelika. Maksimalna veličina grupe je %1$d.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Želite li nastaviti ovaj razgovor s %1$s i podijeliti svoje ime i fotografiju?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Želite li se pridružiti ovoj grupi i podijeliti svoje ime i fotografiju sa članovima? Neće znati da ste vidjeli njihove poruke dok ne prihvatite.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Pridružiti se ovoj grupi? Neće znati da ste vidjeli njihove poruke dok ne prihvatite.</string>
@@ -1163,12 +1226,21 @@
   <string name="WebRtcCallView__signal_video_call">Signal video poziv…</string>
   <string name="WebRtcCallView__start_call">Započni poziv</string>
   <string name="WebRtcCallView__join_call">Pridruži se pozivu</string>
+  <string name="WebRtcCallView__s_group_call">\"%1$s\" Grupni poziv</string>
   <string name="WebRtcCallView__view_participants_list">Prikaži sudionike</string>
   <string name="WebRtcCallView__your_video_is_off">Vaš video je isključen</string>
   <string name="WebRtcCallView__connecting">Povezivanje…</string>
   <string name="WebRtcCallView__reconnecting">Ponovno povezivanje…</string>
+  <string name="WebRtcCallView__joining">Pridruživanje…</string>
   <string name="WebRtcCallView__disconnected">Odspojeno</string>
   <string name="WebRtcCallView__no_one_else_is_here">Nitko drugi nije ovdje</string>
+  <string name="WebRtcCallView__s_is_in_this_call">%1$s je na ovom pozivu</string>
+  <string name="WebRtcCallView__s_and_s_are_in_this_call">%1$s i %2$s su na ovom pozivu</string>
+  <plurals name="WebRtcCallView__s_s_and_d_others_are_in_this_call">
+    <item quantity="one">%1$s, %2$s i još %3$d osoba su na ovom pozivu</item>
+    <item quantity="few">%1$s, %2$s i još %3$d osobe su na ovom pozivu</item>
+    <item quantity="other">%1$s, %2$s i još %3$d osoba su na ovom pozivu</item>
+  </plurals>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">U ovom pozivu · %1$d osoba</item>
@@ -1340,13 +1412,6 @@ broj telefona</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal ažuriranje</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Dostupna je nova verzija Signala, pritisnite za ažurirati</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokiraj %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokirani korisnici vas više neće moći nazvati niti vam slati poruke.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokiraj</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Podijeli profil s %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Najlakši način za dijeljenje vaših podataka o profilu je dodavanje pošiljatelja u kontakte. Ako to ne želite, i dalje možete dijeliti podatke o profilu na ovaj način.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Dijeli profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Pošalji poruku?</string>
   <string name="UntrustedSendDialog_send">Pošalji</string>
@@ -1736,8 +1801,6 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
     <item quantity="other">%1$s se pridružilo grupi.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Naziv grupe je sada \'%1$s\'.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Želite li da vaše ime i profilna slika budu vidljivi u ovoj grupi?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Otključaj</string>
   <!--prompt_mms_activity-->
@@ -1964,6 +2027,7 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <string name="preferences__typing_indicators">Prikaži tipkanje</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Ako su potvrde o tipkanju onemogućene, nećete moći vidjeti potvrde o tipkanju od drugih.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Zatražite od tipkovnice da onemogući personalizirano učenje</string>
+  <string name="preferences_app_protection__blocked_users">Blokirani korisnici</string>
   <string name="preferences_chats__when_using_mobile_data">Prilikom korištenja mobilnih podataka</string>
   <string name="preferences_chats__when_using_wifi">Prilikom korištenja Wi-Fi-ja</string>
   <string name="preferences_chats__when_roaming">Prilikom roaminga</string>
@@ -2026,6 +2090,7 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <!--****************************************-->
   <!--contact_selection_list-->
   <string name="contact_selection_list__unknown_contact">Nova poruka za…</string>
+  <string name="contact_selection_list__unknown_contact_block">Blokiraj korisnika</string>
   <string name="contact_selection_list__unknown_contact_add_to_group">Dodaj u grupu</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Nazovi</string>
@@ -2444,6 +2509,9 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s za %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <string name="BlockedUsersActivity__s_has_been_blocked">\"%1$s\" je blokiran/a.</string>
+  <string name="BlockedUsersActivity__failed_to_block_s">Blokiranje \"%1$s\" nije uspjelo.</string>
+  <string name="BlockedUsersActivity__s_has_been_unblocked">\"%1$s\" je odblokiran/a.</string>
   <!--ReviewCardDialogFragment-->
   <string name="ReviewCardDialogFragment__review_members">Pregled članova</string>
   <string name="ReviewCardDialogFragment__review_request">Pregled zahtjeva</string>
