--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -468,10 +468,14 @@
     <item quantity="one">Ezt a tagot újra meg meg kell hívni, és kell fogadnia a meghívót, mielőtt újra üzenetet tudna fogadni a csoporttól:</item>
     <item quantity="other">Ezeket a tagokat újra meg meg kell hívni, és kell fogadniuk a meghívót, mielőtt újra üzenetet tudnak fogadni a csoporttól:</item>
   </plurals>
-  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
-    <item quantity="one">Ez a csoporttag nem tud az új típusú csoportba belépni, ezért eltávolításra került a tagok közül:</item>
-    <item quantity="other">Ezek a csoporttagok nem tudnak az új típusú csoportba belépni, ezért eltávolításra kerültek a tagok közül:</item>
-  </plurals> -->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_upgrade_to_new_group">Frissítés új típusú csoportra</string>
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">Az új típusú csoportok olyan képességekkel rendelkeznek, mint példáui @említések, csoportadminok, és a jövőben újabb képességes hozzáadása várható.</string>
+  <string name="GroupsV1MigrationInitiation_all_message_history_and_media_will_be_kept">Megtartottuk a frissítés előtti üzenet-előzményeket és médiafájlokat.</string>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_to_access_new_features_like_mentions">Az újabb funkciók eléréséhez, mint az @említések, vagy admin szerep, frissítsd a csoportot.</string>
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Most nem</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Csoport frissítése</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">Most nem</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1295,13 +1299,6 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal frissítés</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">A Signal egy új verziója érhető el, koppints a frissítéshez</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s letiltása?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">A blokkolt kontaktok többé nem lesznek képesek üzeneteket küldeni neked vagy hívni téged.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokkolás</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Megosztod profilodat a következővel: %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">A profilod adait legegyszerűbben úgy tudod megosztani, ha hozzáadod a feladót a névjegyzékedhez. Ha nem szeretnél így tenni, ilyen módon továbbra is megoszthatod profilod adatait.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Profil megosztása</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Üzenet küldése?</string>
   <string name="UntrustedSendDialog_send">Küldés</string>
@@ -1681,8 +1678,6 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
     <item quantity="other">%1$s csatlakozott a csoporthoz.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">A csoport neve mostantól \'%1$s\'.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Láthatóvá teszed a profilneved- és képed a csoport számára?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Feloldás</string>
   <!--prompt_mms_activity-->
