--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -445,6 +445,14 @@
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">新しいグループとは？</string>
   <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">新グループには、@mentionや管理者機能などがあります。将来、新しい機能も追加されます。</string>
   <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">すべてのメッセージ履歴とメディアは、アップグレード前から維持されています。</string>
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_upgrade_to_new_group">新グループにアップグレード</string>
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">新グループには、@mentionや管理者機能などがあります。将来、新しい機能も追加されます。</string>
+  <string name="GroupsV1MigrationInitiation_all_message_history_and_media_will_be_kept">すべてのメッセージ履歴とメディアは、新グループに引き継がれます。</string>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_to_access_new_features_like_mentions">メンションや管理機能を利用するには、このグループをアップグレードしてください。</string>
+  <string name="GroupsV1MigrationInitiationReminder_not_now">今はしない</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">グループを更新する</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">今はしない</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1222,13 +1230,6 @@
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signalアップデート</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">新バージョンのSignalを利用できます。タップしてアップデートします。</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s をブロックしますか？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">ブロックされた連絡先は、あなたへのメッセージ送信や通話発信ができなくなります。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">ブロックする</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s とプロフィール情報を共有しますか？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">相手の電話番号を連絡先に追加することが、あなたのプロフィール情報を共有する一番簡単な方法ですが、それ以外にこの方法でも共有できます。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">プロフィール情報を共有する</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">メッセージを送信しますか？</string>
   <string name="UntrustedSendDialog_send">送信する</string>
@@ -1597,8 +1598,6 @@
     <item quantity="other">%1$s がグループに加わりました。</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">グループ名が「%1$s」になりました。</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">このグループにあなたのプロフィール名と画像を公開しますか？</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">ロック解除</string>
   <!--prompt_mms_activity-->
@@ -2253,14 +2252,14 @@
   <string name="RecipientBottomSheet_add_to_a_group">グループへ追加</string>
   <string name="RecipientBottomSheet_add_to_another_group">他のグループに追加</string>
   <string name="RecipientBottomSheet_view_safety_number">安全番号を表示</string>
-  <string name="RecipientBottomSheet_make_group_admin">グループ管理者を作成</string>
-  <string name="RecipientBottomSheet_remove_as_admin">管理者から削除</string>
+  <string name="RecipientBottomSheet_make_group_admin">グループ管理者にする</string>
+  <string name="RecipientBottomSheet_remove_as_admin">管理者権限を取り消す</string>
   <string name="RecipientBottomSheet_remove_from_group">グループから削除</string>
   <string name="RecipientBottomSheet_message_description">メッセージ</string>
   <string name="RecipientBottomSheet_voice_call_description">音声通話</string>
   <string name="RecipientBottomSheet_insecure_voice_call_description">安全ではない音声電話</string>
   <string name="RecipientBottomSheet_video_call_description">ビデオ通話</string>
-  <string name="RecipientBottomSheet_remove_s_as_group_admin">グループ管理者から %1$s を削除しますか？</string>
+  <string name="RecipientBottomSheet_remove_s_as_group_admin">%1$sのグループ管理者権限を取り消しますか?</string>
   <string name="RecipientBottomSheet_s_will_be_able_to_edit_group">「%1$s」がこのグループの設定やメンバーを編集できるようになります。</string>
   <string name="RecipientBottomSheet_remove_s_from_the_group">このグループから %1$s を削除しますか？</string>
   <string name="RecipientBottomSheet_remove">削除</string>
