--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -423,6 +423,9 @@
   <!--GV2 invites sent-->
   <string name="GroupManagement_learn_more">കൂടുതൽ അറിയുക</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_not_now">ഇപ്പോൾ വേണ്ട</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">ഇപ്പോൾ വേണ്ട</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1070,13 +1073,6 @@ grūpp ap‌ḍē</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal അപ്‌ഡേറ്റ്</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal-ന്റെ പുതിയ പതിപ്പ് ലഭ്യമാണ്, അപ്‌ഡേറ്റ് ചെയ്യാൻ ടാപ്പുചെയ്യുക</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">ബ്ലോക്ക് %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">ബ്ലോക്ക് ചെയ്ത കോൺടാക്റ്റുകൾക്ക് മേലിൽ നിങ്ങൾക്ക് സന്ദേശങ്ങൾ അയയ്‌ക്കാനോ നിങ്ങളെ വിളിക്കാനോ കഴിയില്ല.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">ബ്ലോക്ക്</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s-മായി പ്രൊഫൈൽ പങ്കിടുക?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">നിങ്ങളുടെ പ്രൊഫൈൽ വിവരങ്ങൾ പങ്കിടാനുള്ള എളുപ്പവഴി അയച്ചയാളെ നിങ്ങളുടെ കോൺടാക്റ്റുകളിൽ ചേർക്കുക എന്നതാണ്. നിങ്ങൾ‌ക്ക് താൽ‌പ്പര്യമില്ലെങ്കിൽ‌, നിങ്ങളുടെ പ്രൊഫൈൽ‌ വിവരങ്ങൾ‌ ഇപ്പോഴും ഈ രീതിയിൽ പങ്കിടാൻ‌ കഴിയും.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">പ്രൊഫൈൽ പങ്കിടുക</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">സന്ദേശം അയയ്ക്കുക?</string>
   <string name="UntrustedSendDialog_send">അയയ്‌ക്കുക</string>
@@ -1437,8 +1433,6 @@ grūpp ap‌ḍē</string>
     <item quantity="other">%1$s ഗ്രൂപ്പിൽ ചേർന്നു.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">ഗ്രൂപ്പിന്റെ പേര് ഇപ്പോൾ \'%1$s\' ആണ്.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">നിങ്ങളുടെ പ്രൊഫൈലിന്റെ പേരും ഫോട്ടോയും ഈ ഗ്രൂപ്പിന് ദൃശ്യമാക്കണോ?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">അൺലോക്കുചെയ്യുക</string>
   <!--prompt_mms_activity-->
