--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -439,6 +439,14 @@
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Hva er en \"ny\" gruppe?</string>
   <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Nye grupper har funksjoner som @mentions og gruppeadministratorer, og vil støtte enda flere i fremtiden.</string>
   <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">All meldingshistorikk og alle mediefiler fra før oppgradering har blitt tatt vare på.</string>
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_upgrade_to_new_group">Oppgrader til \"ny\" gruppe</string>
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">Nye grupper har funksjoner som @mentions og gruppeadministratorer, og vil støtte enda flere i fremtiden.</string>
+  <string name="GroupsV1MigrationInitiation_all_message_history_and_media_will_be_kept">All meldingshistorikk og alle mediefiler fra før oppgraderingen blir tatt vare på.</string>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_to_access_new_features_like_mentions">For å få tilgang til de nye funksjonene, som @mentions og administratorer, oppgrader gruppen.</string>
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Ikke nå</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Oppdater gruppe</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">Ikke nå</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1120,13 +1128,6 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal oppdatering</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">En ny versjon av Signal er tilgjengelig, trykk for å oppdatere</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokker %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokkerte kontakter kan ikke sende meldinger til deg eller ringe deg.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokker</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Del profilen med %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Den enkleste måten å dele profilinformasjon på er å legge til avsender i kontaktlista. Hvis du ikke vil gjøre det, kan du fortsatt dele informasjonen her.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Del profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Send melding?</string>
   <string name="UntrustedSendDialog_send">Send</string>
@@ -1491,8 +1492,6 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
     <item quantity="other">%1$s ble med i gruppa.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Gruppenavnet er nå «%1$s».</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Vil du gjøre profilnavnet og profilbildet ditt synlig for denne gruppa?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Lås opp</string>
   <!--prompt_mms_activity-->
