--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -479,10 +479,25 @@ Dei er invitert inn, og ser inga gruppemeldingar før dei godtek.</string>
     <item quantity="one">Denne medlemmen må godkjenna ein invitasjon til denne gruppa igjen og vil ikkje få gruppemeldingar før dei godkjennar:</item>
     <item quantity="other">Desse medlemmane må godkjenna ein invitasjon til denne gruppa igjen og vil ikkje få gruppemeldingar før dei godkjennar:</item>
   </plurals>
-  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
-    <item quantity="one">Denne medlemmen kan ikkje bli med i Nye grupper og er derfor fjerna frå gruppa:</item>
-    <item quantity="other">Desse medlemmane kan ikkje bli med i Nye grupper og er derfor fjerna frå gruppa:</item>
-  </plurals> -->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_upgrade_to_new_group">Oppgrader til Ny gruppe</string>
+  <string name="GroupsV1MigrationInitiation_upgrade_this_group">Oppgrader denne gruppa</string>
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">Nye grupper har funksjonar som @nemningar og gruppeadministratorar og vil støtta fleire funksjonar i framtida.</string>
+  <string name="GroupsV1MigrationInitiation_all_message_history_and_media_will_be_kept">All meldingshistorikk og media vil bli teke vare på frå før oppgraderinga</string>
+  <string name="GroupsV1MigrationInitiation_encountered_a_network_error">Ein nettverksfeil oppstod. Prøv igjen seinare.</string>
+  <string name="GroupsV1MigrationInitiation_failed_to_upgrade">Klarte ikkje å oppgradera.</string>
+  <plurals name="GroupsV1MigrationInitiation_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Denne medlemmen må godkjenna ein invitasjon til denne gruppa igjen og vil ikkje få gruppemeldingar før dei godkjennar:</item>
+    <item quantity="other">Desse medlemmane må godkjenna ein invitasjon til denne gruppa igjen og vil ikkje få gruppemeldingar før dei godkjennar:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationInitiation_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Denne medlemmen kan ikkje bli med i Nye grupper og blir derfor fjerna frå gruppa:</item>
+    <item quantity="other">Desse medlemmane kan ikkje bli med i Nye grupper og blir derfor fjerna frå gruppa:</item>
+  </plurals>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_to_access_new_features_like_mentions">Oppgrader denne gruppa for å få nye funksjonar som @nemningar og administratorar.</string>
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Ikkje no</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Oppdater gruppe</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <plurals name="GroupsV1MigrationSuggestionsReminder_members_couldnt_be_added_to_the_new_group">
     <item quantity="one">%1$d medlem kunne ikkje bli lagt til i den Nye gruppa igjen. Vil du legga dei til no?</item>
@@ -632,6 +647,9 @@ Dei er invitert inn, og ser inga gruppemeldingar før dei godtek.</string>
   <string name="ManageGroupActivity_edit_name_and_picture">Endra namn og bilde</string>
   <string name="ManageGroupActivity_legacy_group">Eldre gruppe</string>
   <string name="ManageGroupActivity_legacy_group_learn_more">Dette er ei Eldre gruppe. Funksjonalitet som gruppeadministratorar er berre tilgjengeleg for Nye grupper.</string>
+  <string name="ManageGroupActivity_legacy_group_upgrade">Dette er ei Eldre gruppe. For å få nye funksjonar som @nemningar og administratorar,</string>
+  <string name="ManageGroupActivity_legacy_group_too_large">Denne Eldre gruppa kan ikkje oppgraderast til ei Ny gruppe sidan ho er for stor. Maksimal gruppestorleik er %1$d.</string>
+  <string name="ManageGroupActivity_upgrade_this_group">oppgrader denne gruppa.</string>
   <string name="ManageGroupActivity_this_is_an_insecure_mms_group">Dette er ei usikker MMS-gruppe. For å ha ei privat samtale og få tilgang til funksjonar som gruppenamn kan du invitera kontaktane dine til Signal.</string>
   <string name="ManageGroupActivity_invite_now">Inviter no</string>
   <!--GroupMentionSettingDialog-->
@@ -1018,6 +1036,8 @@ Dei er invitert inn, og ser inga gruppemeldingar før dei godtek.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Vil du la %1$s senda deg meldingar og dela namnet og bildet ditt med dei? Dei får ikkje vita at du har sett meldinga deira før du godkjenner.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Vil du la %1$s senda deg meldingar og dela namnet og bildet ditt med dei? Du får inga meldingar før du avblokkerer dei.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Fortset samtalen din med denne gruppa og del namnet og bildet ditt med medlemmane?</string>
+  <string name="MessageRequestBottomView_upgrade_this_group_to_activate_new_features">Oppgrader denne gruppa for å få nye funksjonar som @nemningar og administratorar. Medlemmar som ikkje har delt namn eller profilbilde med denne gruppa blir inviterte inn.</string>
+  <string name="MessageRequestBottomView_this_legacy_group_can_no_longer_be_used">Denne Eldre gruppa kan ikkje lenger brukast sidan ho er for stor. Maksimal gruppestorleik er %1$d.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Fortset samtalen din med %1$s og del namnet og bildet ditt med dei?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Vil du bli med i denne gruppa og dela namnet og bildet ditt med medlemmane? Dei får ikkje vita at du har sett meldingane deira før du godkjenner.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Bli med i gruppa? Dei vil ikkje vita at du har sett meldingane deira før du godtek.</string>
@@ -1340,13 +1360,6 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal-oppdatering</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Det finst ei ny utgåve av Signal; trykk for å oppdatera</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokker %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokkerte kontaktar vil ikkje lenger kunna senda deg meldingar eller ringa deg.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokker</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Del profilen din med %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Den enklaste måten å dela profilinformasjon med er å legga sendaren til i kontaktane dine. Viss du ikkje ønsker det, kan du likevel dela profilinformasjon på denne måten.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Del profilen</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Send melding?</string>
   <string name="UntrustedSendDialog_send">Send</string>
@@ -1725,8 +1738,6 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
     <item quantity="other">%1$s vart med i gruppa.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Gruppenamnet er no «%1$s».</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Vil du at profilnamnet og bildet ditt skal vera synleg for denne gruppa?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Lås opp</string>
   <!--prompt_mms_activity-->
