--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -80,8 +80,15 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erro ao reproduzir áudio!</string>
   <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users">Utilizadores bloqueados</string>
+  <string name="BlockedUsersActivity__add_blocked_user">Adicionar utilizador bloqueado</string>
   <string name="BlockedUsersActivity__blocked_users_will">Os utilizadores bloqueados não poderão telefonar-lhe ou enviar-lhe mensagens.</string>
+  <string name="BlockedUsersActivity__no_blocked_users">Sem utilizadores bloqueados</string>
+  <string name="BlockedUsersActivity__block_user">Bloquear utilizador?</string>
+  <string name="BlockedUserActivity__s_will_not_be_able_to">\"%1$s\" não será capaz de lhe telefonar ou enviar mensagens.</string>
   <string name="BlockedUsersActivity__block">Bloquear</string>
+  <string name="BlockedUsersActivity__unblock_user">Desbloquear utilizador?</string>
+  <string name="BlockedUsersActivity__do_you_want_to_unblock_s">Deseja desbloquear \"%1$s\"?</string>
   <string name="BlockedUsersActivity__unblock">Desbloquear</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Bloquear e abandonar %1$s?</string>
@@ -467,13 +474,56 @@
     <item quantity="one">Este membro necessitará de aceitar um convite para se juntar novamente a este grupo e não receberá mensagens do grupo até que eles aceitem:</item>
     <item quantity="other">Estes membros necessitarão de aceitar um convite para se juntarem novamente a este grupo e não receberão mensagens de grupo até que eles aceitem:</item>
   </plurals>
-  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
-    <item quantity="one">Este membro não é capaz de se juntar a \'Novos grupos\' e foi removido do grupo:</item>
-    <item quantity="other">Estes membros não são capazes de se juntarem a \'Novos grupos\' e foram removidos do grupo:</item>
-  </plurals> -->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_upgrade_to_new_group">Upgrade para \'Novo grupo\'</string>
+  <string name="GroupsV1MigrationInitiation_upgrade_this_group">Fazer o upgrade deste grupo</string>
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">Os \'Novos grupos\' têm recursos como @menções e administradores de grupos e oferecerão futuramente suporte para mais recursos.</string>
+  <string name="GroupsV1MigrationInitiation_all_message_history_and_media_will_be_kept">Todo o histórico de mensagens e média será mantido para antes do upgrade. </string>
+  <string name="GroupsV1MigrationInitiation_encountered_a_network_error">Foi encontrado um erro de rede. Por favor, tete novamente mais tarde.</string>
+  <string name="GroupsV1MigrationInitiation_failed_to_upgrade">Ocorreu um erro ao tentar fazer o upgrade.</string>
+  <plurals name="GroupsV1MigrationInitiation_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Este membro necessitará de aceitar um convite para se juntar novamente a este grupo e não receberá mensagens do grupo até que ele aceite:</item>
+    <item quantity="other">Estes membros necessitarão de aceitar um convite para se juntarem novamente a este grupo e não receberão mensagens do grupo até que eles aceitem:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationInitiation_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Este membro não é capaz de se juntar a \'Novos grupos\', e será removido do grupo:</item>
+    <item quantity="other">Estes membros não são capazes de se juntarem a \'Novos grupos\', e serão removidos do grupo:</item>
+  </plurals>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_to_access_new_features_like_mentions">Para aceder a novos recursos como @menções e administradores, faça o upgrade deste grupo.</string>
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Agora não</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Atualizar grupo</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
+  <plurals name="GroupsV1MigrationSuggestionsReminder_members_couldnt_be_added_to_the_new_group">
+    <item quantity="one">%1$d membro não pode ser readicionado ao \'Novo grupo\'. Deseja adiciona-lo novamente?</item>
+    <item quantity="other">%1$d membros não puderam ser readicionados ao \'Novo grupo\'. Desejam adicioná-los agora?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsReminder_add_members">
+    <item quantity="one">Adicionar membro</item>
+    <item quantity="other">Adicionar membros</item>
+  </plurals>
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">Agora não</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members_question">
+    <item quantity="one">Adicionar membro?</item>
+    <item quantity="other">Adicionar membros?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_these_members_couldnt_be_automatically_added">
+    <item quantity="one">Os seguinte membro não pode ser adicionado automaticamente para o \'Novo grupo\' durante o upgrade:</item>
+    <item quantity="other">Os seguintes membros não puderam ser adicionados automaticamente para o \'Novo grupo\' durante o upgrade:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members">
+    <item quantity="one">Adicionar membro</item>
+    <item quantity="other">Adicionar membros</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_failed_to_add_members_try_again_later">
+    <item quantity="one">Ocorreu um erro ao tentar adicionar membro. Por favor, tente novamente mais tarde.</item>
+    <item quantity="other">Ocorreu um erro ao tentar adicionar membros. Por favor, tente novamente mais tarde.</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_cannot_add_members">
+    <item quantity="one">Não foi possível adicionar membro.</item>
+    <item quantity="other">Não foi possível adicionar membros.</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Abandonar o grupo?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Deixará poder de receber ou enviar mensagens deste grupo.</string>
@@ -592,6 +642,9 @@
   <string name="ManageGroupActivity_edit_name_and_picture">Editar nome e imagem</string>
   <string name="ManageGroupActivity_legacy_group">Grupo legado</string>
   <string name="ManageGroupActivity_legacy_group_learn_more">Este é um \'Grupo legado\'. Os recursos como administradores de grupo encontram-se apenas disponíveis para \'Grupos novos\'.</string>
+  <string name="ManageGroupActivity_legacy_group_upgrade">Este é um \'Grupo legado\'. Para aceder a novos recursos como as menções e administradores,</string>
+  <string name="ManageGroupActivity_legacy_group_too_large">Não pode ser feito o upgrade deste \'Grupo legado\' porque é demasiadamente grande. O tamanho máximo do grupo é de %1$d.</string>
+  <string name="ManageGroupActivity_upgrade_this_group">faça o upgrade deste grupo.</string>
   <string name="ManageGroupActivity_this_is_an_insecure_mms_group">Este é um Grupo MMS inseguro. Para conversar de forma privada e aceder a recursos como nomes do grupo, convide os seus contactos para o Signal.</string>
   <string name="ManageGroupActivity_invite_now">Convidar agora</string>
   <!--GroupMentionSettingDialog-->
@@ -978,6 +1031,7 @@
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Permite que %1$s lhe enviem mensagens e que seja partilhado o seu nome e fotografia com eles? Eles não saberão que viu a mensagem deles até que aceite.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Permite que %1$s lhe enviem mensagens e que seja partilhado o seu nome e fotografia com eles? Eles não irão receber nenhuma mensagem até que os desbloqueie.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Continuar a sua conversa com este grupo e partilhar o seu nome e fotografia com os seus membros?</string>
+  <string name="MessageRequestBottomView_this_legacy_group_can_no_longer_be_used">Este \'Grupo legado\' deixou de poder ser utilizado porque é demasiadamente grande. O tamanho máximo do grupo é de %1$d.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Continuar a sua conversa com %1$s e partilhar o seu nome e fotografia com eles?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Juntar-se a este grupo e partilhar o seu nome e fotografia com os seus membros? Eles não sabem que viu as mensagens deles até que aceite.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Juntar-se a este grupo? Eles não saberão que viu as mensagens deles até que aceite o convite.</string>
@@ -1118,8 +1172,15 @@
   <string name="WebRtcCallView__your_video_is_off">O seu vídeo encontra-se desligado</string>
   <string name="WebRtcCallView__connecting">A ligar…</string>
   <string name="WebRtcCallView__reconnecting">A ligar novamente…</string>
+  <string name="WebRtcCallView__joining">A entrar…</string>
   <string name="WebRtcCallView__disconnected">Desligado</string>
   <string name="WebRtcCallView__no_one_else_is_here">Não está mais ninguém aqui</string>
+  <string name="WebRtcCallView__s_is_in_this_call">%1$s está nesta chamada</string>
+  <string name="WebRtcCallView__s_and_s_are_in_this_call">%1$s e %2$s estão nesta chamada</string>
+  <plurals name="WebRtcCallView__s_s_and_d_others_are_in_this_call">
+    <item quantity="one">%1$s, %2$s, e %3$d outro estão nesta chamada </item>
+    <item quantity="other">%1$s, %2$s, e outros %3$d estão nesta chamada</item>
+  </plurals>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Nesta chamada · %1$d pessoa</item>
@@ -1289,13 +1350,6 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Atualização do Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Está disponível uma nova versão do Signal, toque para atualizar</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Bloquear %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Contactos bloqueados deixarão de poder enviar-lhe mensagens ou ligar-lhe.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Bloquear</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Partilhar perfil com %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">A forma mais simples de partilhar a sua informação de perfil é adicionar o remetente aos seus contactos. Se não o desejar fazer, pode mesmo assim partilhar essa informação desta forma.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Partilhar perfil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Enviar mensagem?</string>
   <string name="UntrustedSendDialog_send">Enviar</string>
@@ -1674,8 +1728,6 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
     <item quantity="other">%1$s juntaram-se ao grupo.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">O nome do grupo é agora \'%1$s\'.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Tornar o seu nome e fotografia de perfil visíveis para este grupo?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Desbloquear</string>
   <!--prompt_mms_activity-->
@@ -1901,6 +1953,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences__typing_indicators">Indicadores de escrita</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Se os indicadores de escrita estiverem desativados, não poderá ver os indicadores de escrita de outros utilizadores.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Pedir ao teclado para desligar a aprendizagem de palavras</string>
+  <string name="preferences_app_protection__blocked_users">Utilizadores bloqueados</string>
   <string name="preferences_chats__when_using_mobile_data">Ao utilizar os dados móveis</string>
   <string name="preferences_chats__when_using_wifi">Ao utilizar o Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Ao utilizar o roaming</string>
@@ -1963,6 +2016,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--****************************************-->
   <!--contact_selection_list-->
   <string name="contact_selection_list__unknown_contact">Nova mensagem para…</string>
+  <string name="contact_selection_list__unknown_contact_block">Bloquear utilizador</string>
   <string name="contact_selection_list__unknown_contact_add_to_group">Adicionar ao grupo</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Telefonar</string>
@@ -2374,6 +2428,9 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s para %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <string name="BlockedUsersActivity__s_has_been_blocked">\"%1$s\" foi bloqueado(a).</string>
+  <string name="BlockedUsersActivity__failed_to_block_s">Ocorreu um erro ao tentar bloquear \"%1$s\"</string>
+  <string name="BlockedUsersActivity__s_has_been_unblocked">\"%1$s\" foi desbloqueado.</string>
   <!--ReviewCardDialogFragment-->
   <string name="ReviewCardDialogFragment__review_members">Rever membros</string>
   <string name="ReviewCardDialogFragment__review_request">Rever pedido</string>
