--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -475,6 +475,10 @@
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Ce sunt Noile Grupuri?</string>
   <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Tot istoricul mesajelor și conținutul media a fost păstrat înainte de actualizare.</string>
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Nu acum</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Actualizează grup</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <string name="GroupsV1MigrationSuggestionsReminder_not_now">Nu acum</string>
   <!--GroupsV1MigrationSuggestionsDialog-->
@@ -1320,13 +1324,6 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Actualizare Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">O nouă versiune de Signal este disponibilă, apasă pentru actualizare</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blochez %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Contactele blocate nu vor mai putea sa-ți trimită mesaje sau să te sune.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blochează</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Distribui profilul cu %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Cea mai ușoară modalitate de a distribui informațiile despre profilul dvs. este să adăugați expeditorul la contactele dvs. Dacă nu doriți asta, puteți distribui informațiile despre profilul dvs. prin această modalitate.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Distribuie profilul</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Trimit mesajul?</string>
   <string name="UntrustedSendDialog_send">Trimiteți</string>
@@ -1715,8 +1712,6 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
     <item quantity="other">%1$s s-au alăturat grupului.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Numele grupului este acum \'%1$s\'.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Doriți să faceți vizibil numele și poza profilului pentru acest grup?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Deblochează</string>
   <!--prompt_mms_activity-->
