--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -475,10 +475,25 @@
 grupit dhe s’do të marrë mesazhe grupi përpara se ta pranojë:</item>
     <item quantity="other">Këta anëtarë do të duhet të pranojnë një ftesë për t’u bërë pjesë e grupit dhe s’do të marrin mesazhe grupi përpara se ta pranojnë:</item>
   </plurals>
-  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
-    <item quantity="one">Ky anëtar s’është i aftë të bëhet pjesë Grupesh të Rinj, dhe është hequr prej grupit:</item>
-    <item quantity="other">Këta anëtarë s’janë të aftë të bëhen pjesë Grupesh të Rinj, dhe janë hequr prej grupit:</item>
-  </plurals> -->
+  <!--GroupsV1MigrationInitiationBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationInitiation_upgrade_to_new_group">Përmirësoje si Grup të Ri</string>
+  <string name="GroupsV1MigrationInitiation_upgrade_this_group">Përpunojeni këtë grup</string>
+  <string name="GroupsV1MigrationInitiation_new_groups_have_features_like_mentions">Grupet e Reja kanë veçori të tilla si @përmendje dhe përgjegjës grupi, dhe në të ardhmen do të mbulojnë më tepër veçori.</string>
+  <string name="GroupsV1MigrationInitiation_all_message_history_and_media_will_be_kept">Krejt historiku i mesazheve dhe mediat do të mbahen prej kohës para përmirësimit.</string>
+  <string name="GroupsV1MigrationInitiation_encountered_a_network_error">U has një gabim rrjeti. Riprovoni më vonë.</string>
+  <string name="GroupsV1MigrationInitiation_failed_to_upgrade">S’u arrit të përmirësohej.</string>
+  <plurals name="GroupsV1MigrationInitiation_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Ky anëtar do të duhet të pranojë një ftesë, për t’u bërë sërish pjesë e këtij grupi dhe s’do të marrë mesazhe grupi, pa pranuar ftesën:</item>
+    <item quantity="other">Këta anëtarë do të duhet të pranojnë një ftesë, për t’u bërë sërish pjesë e këtij grupi dhe s’do të marrin mesazhe grupi, pa pranuar ftesën:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationInitiation_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Ky anëtar s’është i aftë të bëhet pjesë Grupesh të Rinj, dhe do të hiqet prej grupit:</item>
+    <item quantity="other">Këta anëtarë s’janë të aftë të bëhen pjesë Grupesh të Rinj, dhe do të hiqen prej grupit:</item>
+  </plurals>
+  <!--GroupsV1MigrationInitiationReminder-->
+  <string name="GroupsV1MigrationInitiationReminder_to_access_new_features_like_mentions">Që të përdorni veçori të tilla si, @përmendje dhe përgjegjës, përmirësojeni këtë grup.</string>
+  <string name="GroupsV1MigrationInitiationReminder_not_now">Jo tani</string>
+  <string name="GroupsV1MigrationInitiationReminder_update_group">Fresko grupiin</string>
   <!--GroupsV1MigrationSuggestionsReminder-->
   <plurals name="GroupsV1MigrationSuggestionsReminder_members_couldnt_be_added_to_the_new_group">
     <item quantity="one">%1$d anëtar s’u rishtua dot te Grupi i Ri. Doni të shtohet tani?</item>
@@ -631,6 +646,9 @@ të përditësojnë Signal-in, ose t’i hiqni para krijimit të grupit.</item>
   <string name="ManageGroupActivity_edit_name_and_picture">Përpunoni emër dhe foto</string>
   <string name="ManageGroupActivity_legacy_group">Grup i Dikurshëm</string>
   <string name="ManageGroupActivity_legacy_group_learn_more">Ky është një Grup i Dikurshëm. Veçori të tilla, bie fjala, përgjegjës grupi mund të kihen vetëm për Grupe të Rinj.</string>
+  <string name="ManageGroupActivity_legacy_group_upgrade">Ky është një Grup i Dikurshëm. Që të përdorni veçori të reja, të tilla si @përmendje dhe përgjegjës,</string>
+  <string name="ManageGroupActivity_legacy_group_too_large">Ky Grup i Dikurshëm s’mund të përmirësohet si Grup i Ri, ngaqë është shumë i madh. Madhësia maksimum për grupet është %1$d.</string>
+  <string name="ManageGroupActivity_upgrade_this_group">përmirësoni këtë grup.</string>
   <string name="ManageGroupActivity_this_is_an_insecure_mms_group">Ky është një grup MMS i pasigurt. Që të fjaloseni privatisht dhe të përdorni veçori të tilla si emra grupesh, për shembull, ftojini kontaktet tuaj te Signal-i.</string>
   <string name="ManageGroupActivity_invite_now">Ftojini tani</string>
   <!--GroupMentionSettingDialog-->
@@ -1017,6 +1035,8 @@ të përditësojnë Signal-in, ose t’i hiqni para krijimit të grupit.</item>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Të lejohet %1$s t’ju dërgojë mesazh dhe të ndajë emrin dhe foton tuaj me të tjerë? S’do ta dijë se e keni parë mesazhin e tij, para se të pranoni këtë.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Të lejohet %1$s t’ju dërgojë mesazh dhe të ndajë emrin dhe foton tuaj me të tjerë? S’do të merrni ndonjë mesazh, para se ta zhbllokoni.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Të vazhdohet biseda juaj me këtë grup dhe t’u jepet emri dhe fotoja juaj anëtarëve të tij?</string>
+  <string name="MessageRequestBottomView_upgrade_this_group_to_activate_new_features">Përmirësojeni këtë grup, që të aktivizohen veçori të reja, të tilla si @përmendje dhe përgjegjës. Anëtarët që nuk kanë dhënë emrin ose foton e tyre te ky grup, do të ftohen të bëhen pjesë.</string>
+  <string name="MessageRequestBottomView_this_legacy_group_can_no_longer_be_used">Ky Grup i Dikurshëm s’mund të përdoret më, ngaqë është shumë i madh. Madhësia maksimum për grupet është %1$d.</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Të vazhdohet biseda juaj me %1$s dhe t’i jepet emri dhe fotoja juaj?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Të bëhet anëtarësim në këtë grup dhe të ndahet emri dhe fotoja juaj me anëtarët e tij? S’do ta dinë se i keni parë mesazhet e tyre, para se të pranoni këtë.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Doni të bëheni pjesë e këtij grupi? S’do ta dinë se i keni parë mesazhet e tyre, deri sa të pranoni.</string>
@@ -1336,13 +1356,6 @@ të përditësojnë Signal-in, ose t’i hiqni para krijimit të grupit.</item>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Përditësim i Signal-it</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Është gati një version i ri i Signal-it, prekeni që të përditësohet</string>
-  <!--UnknownSenderView-->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Të bllokohet %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Kontaktet e bllokuara s\’do të jenë më në gjendje t\’ju dërgojnë mesazhe apo t\’ju telefonojnë.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Bllokoje</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Të ndahet profili me %s?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Rruga më e lehtë për të ndarë me të tjerët të dhëna të profilit tuaj është shtimi i dërguesit te kontaktet tuaja. Nëse s\’doni ta bëni këtë, prapë mundeni të ndani të dhëna të profilit tuaj me të tjerët sipas kësaj rruge.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Ndaje profilin</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Të dërgohet mesazhi?</string>
   <string name="UntrustedSendDialog_send">Dërgoje</string>
@@ -1721,8 +1734,6 @@ të përditësojnë Signal-in, ose t’i hiqni para krijimit të grupit.</item>
     <item quantity="other">%1$s u bënë pjesë e grupit.</item>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Emri i grupit tani është \'%1$s\'.</string>
-  <!--profile_group_share_view-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Të bëhet emri dhe fotoja juaj e profilit të dukshëm për këtë grup?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Zhbllokoje</string>
   <!--prompt_mms_activity-->
